unpackaged/main/default/objects/dfsle__GenTemplate__c/dfsle__GenTemplate__c.object-meta.xml
<CustomObject>
    <label>DocuSign Gen Template</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Gen Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>