unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__AgreementMetadata__c.field-meta.xml
<CustomField>
    <fullName>dfsle__AgreementMetadata__c</fullName>
    <label>Agreement Metadata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>