unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__CurrencyLocaleEdit__c.field-meta.xml
<CustomField>
    <fullName>dfsle__CurrencyLocaleEdit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generator Can Edit</label>
    <type>Checkbox</type>
</CustomField>