unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__DocumentTargetLocation__c.field-meta.xml
<CustomField>
    <fullName>dfsle__DocumentTargetLocation__c</fullName>
    <label>Document Target Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>salesforce</fullName>
                <default>true</default>
                <label>salesforce</label>
            </value>
            <value>
                <fullName>clm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>