unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__EnvelopeConfiguration__c.field-meta.xml
<CustomField>
    <fullName>dfsle__EnvelopeConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The configuration used to generate this envelope.</inlineHelpText>
    <label>Envelope Template</label>
    <referenceTo>dfsle__EnvelopeConfiguration__c</referenceTo>
    <relationshipLabel>DocuSign Gen Templates</relationshipLabel>
    <relationshipName>GenTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>