unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__FileName__c.field-meta.xml
<CustomField>
    <fullName>dfsle__FileName__c</fullName>
    <description>Online Editor File Name</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>