unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__HasEnabledSendForSignature__c.field-meta.xml
<CustomField>
    <fullName>dfsle__HasEnabledSendForSignature__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Has Enabled Send For Signature</label>
    <type>Checkbox</type>
</CustomField>