unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__HasLaunchAutomatically__c.field-meta.xml
<CustomField>
    <fullName>dfsle__HasLaunchAutomatically__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Launch Automatically</label>
    <type>Checkbox</type>
</CustomField>