unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__HasPreviewedDocuments__c.field-meta.xml
<CustomField>
    <fullName>dfsle__HasPreviewedDocuments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Previewed Documents</label>
    <type>Checkbox</type>
</CustomField>