unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__InvoiceMappings__c.field-meta.xml
<CustomField>
    <fullName>dfsle__InvoiceMappings__c</fullName>
    <label>Invoice Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>