unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__IsAutomateInvoice__c.field-meta.xml
<CustomField>
    <fullName>dfsle__IsAutomateInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Automate Invoice</label>
    <type>Checkbox</type>
</CustomField>