unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__ObjectMappings2__c.field-meta.xml
<CustomField>
    <fullName>dfsle__ObjectMappings2__c</fullName>
    <label>Object Mappings 2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>