unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__SignerMappings__c.field-meta.xml
<CustomField>
    <fullName>dfsle__SignerMappings__c</fullName>
    <label>Signer Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>