unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__StepsCompleted__c.field-meta.xml
<CustomField>
    <fullName>dfsle__StepsCompleted__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Steps Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>