unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__templateCurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>dfsle__templateCurrencyCode__c</fullName>
    <label>Template Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>