unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__TemplateId__c.field-meta.xml
<CustomField>
    <fullName>dfsle__TemplateId__c</fullName>
    <description>Online Editor Template Id</description>
    <externalId>true</externalId>
    <label>Template Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>