unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__TemplateType__c.field-meta.xml
<CustomField>
    <fullName>dfsle__TemplateType__c</fullName>
    <description>Template Type</description>
    <label>Template Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Editor</fullName>
                <label>DocuSign Agreement Cloud Editor</label>
            </value>
            <value>
                <fullName>Microsoft Word</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>