unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__UseAllTemplates__c.field-meta.xml
<CustomField>
    <fullName>dfsle__UseAllTemplates__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use All Templates</label>
    <type>Checkbox</type>
</CustomField>