unpackaged/main/default/objects/dfsle__GenTemplate__c/fields/dfsle__UseCurrentRecord__c.field-meta.xml
<CustomField>
    <fullName>dfsle__UseCurrentRecord__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Current Record</label>
    <type>Checkbox</type>
</CustomField>